kubernetes/ingress-nginx/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homelab-ghost.blog
    http:
      paths:
      - path: /dashboard # 접속할 경로 설정
        pathType: Prefix
        backend:
          service:
            name: ghost-service # 위에서 생성한 서비스 이름
            port:
              number: 3001 # 서비스의 포트 번호
